Made a massive amount of modifications and refinements to the application. Needs the UI to begin testing functionality